2025-10-09T12:44:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18376727234 # 1272
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-09
* notice: last 14d: unq all: 55 102
* notice: prev accum: outdated-unq outdated-all / unq all: 4825 9723 / 4903 9827
* notice: next accum: outdated-unq outdated-all / unq all: 4832 9731 / 4908 9833
* notice: prev exec diff / last date diff / accum: unq all: +5 +6 -0 -0 / +5 +6 -0 -0 / 5 6
* notice: removed / changed dates: [2025-09-25] / [2025-10-09]

2025-10-09T01:38:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18362870547 # 1271
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-09
* notice: last 14d: unq all: 55 103
* notice: prev accum: outdated-unq outdated-all / unq all: 4825 9723 / 4898 9821
* notice: next accum: outdated-unq outdated-all / unq all: 4825 9723 / 4903 9827
* notice: prev exec diff / last date diff / accum: unq all: +5 +6 -1 -1 / +6 +7 -0 -0 / 6 7
* notice: removed / changed dates: [] / [2025-09-25 2025-10-08]

2025-10-08T12:44:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18345052504 # 1270
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-08
* notice: last 14d: unq all: 51 98
* notice: prev accum: outdated-unq outdated-all / unq all: 4819 9716 / 4897 9820
* notice: next accum: outdated-unq outdated-all / unq all: 4825 9723 / 4898 9821
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-24] / [2025-10-08]

2025-10-08T01:38:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18331094081 # 1269