@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-09T12:44:14Z",
-  "count_outdated" : 9731,
-  "uniques_outdated" : 4832,
-  "count" : 9833,
+  "timestamp" : "2025-10-10T01:39:09Z",
+  "count_outdated" : 9732,
+  "uniques_outdated" : 4833,
+  "count" : 9834,
   "uniques" : 4908,
   "clones" : [
-    {
-      "timestamp": "2025-09-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-27T00:00:00Z",
       "count": 2,
@@ -124,9 +115,9 @@
     },
     {
       "timestamp": "2025-10-09T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 6 ],
-      "count_decinc": [ 0, 6 ],
+      "count": 7,
+      "count_minmax": [ 6, 7 ],
+      "count_decinc": [ 0, 7 ],
       "uniques": 5,
       "uniques_minmax": [ 5, 5 ],
       "uniques_decinc": [ 0, 5 ]
