@@ -3,11 +3,6 @@
   "uniques": 55,
   "clones": [
     {
-      "timestamp": "2025-09-26T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-09-27T00:00:00Z",
       "count": 2,
       "uniques": 2
@@ -69,7 +64,7 @@
     },
     {
       "timestamp": "2025-10-09T00:00:00Z",
-      "count": 6,
+      "count": 7,
       "uniques": 5
     }
   ]
